<?xml version="1.0"?>
<package format="2">
  <name>akimap</name>
  <version>1.0.0</version>
  <description>Occupancy Grid based on Adaptive Kernel Inference</description>

  <maintainer email="youngsun.kwon@kaist.ac.kr">yskwon</maintainer>
  <license>BSD</license>

  <url type="website">http://sglab.kaist.ac.kr/publication/akimap</url>
  <url type="bugtracker">https://github.com/PinocchioYS/akimap/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sesnsor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

</package>
